spectec/test/interp/neg/wrong-argument-type.imp
// Calling a function with an argument of the wrong type.
(int -> int) f = fun(int n) -> int { n };
int r = f(true)
